Seperated ViewStyles from ToggleButton Template - only works if using DynamicResources instead of Static

--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -12,6 +12,7 @@
                         AncestorType="{x:Type Window}" />
 
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ViewStyles.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="ToggleButton.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
             
